tests/baselines/reference/tsxTypeArgumentPartialDefinitionStillErrors.errors.txt
tests/cases/compiler/file.tsx(11,14): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/file.tsx (1 errors) ====
    declare namespace JSX {
        interface Element {
            render(): Element | string | false;
        }
    }
    
    function SFC<T>(props: Record<string, T>) {
        return '';
    }
    
    <SFC<string> prop={1}></SFC>; // should error
                 ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    